styles/styles.css
body {
    background: #111122;
    color: #dddddd;
    display: flex;
    flex-flow: column nowrap;
    margin: 0px;
    font-family: roboto;
    height: 100vh;
}

.header, .footer {
    background: #1f2937;
    display: flex;
    justify-content: center;
    padding: 0 30px;
}

.header-nav {
    flex: 0 1 1100px;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    min-height: 70px;
    align-items: center; 
    
}

.logo {
    font-size: 24px;
    font-weight: 1000;
    color: #f9faf8;
    padding: 0px 10px;
}

.header-link {
    text-decoration: none;
}

.nav-links {
    display: flex;
    gap: 20px;
    flex-flow: row wrap;
    padding: 0px 10px;
}

.main1 {
    display: flex;
    justify-content: center;
    background: #1f2937;
    flex: 1 0  400px;
}

.main1-content {
    flex: 0 1 1100px;

    display: flex;

    /* padding: 10px 150px; */
    justify-content: space-between;
    align-items: center;
    gap: 20px;
    padding: 10px 30px;
}

.hero-content {
    display: flex;
    flex-flow: column wrap;
    justify-content: space-around;
    max-width: 450px;   
    min-height: 250px;
    flex-basis: auto;
    gap: 10px;
    justify-content: center;
}

.hero-title {
    font-size: 48px;
    font-weight: 1000;
    color: #f9faf8;
}
.hero-subtext, .header-link {
    font-size: 18px;
    color: #f9faf8;
}

.main1 button, .signup-button {
    font-weight: bold;
    font-size: 18px;
    width: fit-content;
    background-color: #3882f6;
    color: #f9faf8;
    border: none;
    border-radius: 10px;    
    padding: 10px 25px;
}

#hero-image {
    height: 250px;
    width: auto;
}

.main2 {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    flex: 1 0 400px;
    background: #fefefe;
    padding: 10px 30px;
}

.main2-header {
    font-size: 36px;
    font-weight: bolder;
    color: #1f2937;
    margin: 30px;
}

.main2-content {
    display: flex;
    gap: 30px;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin: 30px;
}

.main2-content .item {
    display: flex;
    flex-flow: column nowrap;
    gap: 10px;
}

.main2 img {
    border: 5px solid #3882f6;
    border-radius: 15px;
}

.item .text {
    max-width: 150px;
    color: #1f2937;
    text-align: center;
}

.main3 {
    display: flex;
    padding: 10px 30px;
    flex: 1 0 300px;
    justify-content: center;
    align-items: center;
    background: #e5e7eb;
}

.quote-container {
    flex: 0 1 800px;
    display: flex;
    flex-direction: column;
    gap: 10px;
    flex-shrink: 1;
}

.quote {
    font-size: 36px;
    font-style: italic;
    font-weight: light;
    color: #1f2937;
    flex-shrink: 1;
}

.quote-reference {
    font-size: 28px;
    align-self: flex-end;
    font-weight: 1000;
    color: #1f2937;
}

.main4 {
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 1 0 200px;
    background: #fefefe;
    padding: 10px 30px;
}

.modal {
    flex: 0 1 1000px;
    min-height: 150px;
    background: #3882f6;
    display: flex;
    gap: 10px;
    align-items: center;
    justify-content: center;
    padding: 0 140px;
    border-radius: 10px;
}

.modal-content {
    display: flex;
    flex-direction: column;
    flex: 0 1 auto;
}

.modal-title , .modal-subtext {
    color: #f9faf8;
}

.modal-title {
    font-size: 24px;
    font-weight: bold;
}

.signup-button {
    margin-left: auto;
    border: #fefefe 3px solid;
    flex: 0 0 auto;
}


.footer {
    min-height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

